--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
-antlr4-python3-runtime==4.10
+antlr4-python3-runtime
 async-timeout==4.0.2
 asyncclick==8.1.3.2
 attrs==22.1.0
@@ -8,10 +8,11 @@ charset-normalizer==2.1.0
 frozenlist==1.3.1
 idna==3.3
 multidict==6.0.2
-omegaconf==2.2.2
+omegaconf
 pip==22.2.2
 py-cord==2.0.0
 PyYAML==6.0
 setuptools==65.0.0
 wheel==0.37.1
 yarl==1.8.1
+sqlalchemy-aio
