--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ async-timeout==4.0.2
 asyncclick==8.1.3.2
 attrs==22.1.0
 charset-normalizer==2.1.0
+colorlog
 frozenlist==1.3.1
 idna==3.3
+git+https://github.com/IotaSpencer/logging-disgram#egg=logging-disgram
 multidict==6.0.2
 omegaconf
 pip==22.2.2
