--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,24 @@ antlr4-python3-runtime
 async-timeout==4.0.2
 asyncclick==8.1.3.2
 attrs==22.1.0
-charset-normalizer==2.1.0
-colorlog
+charset-normalizer==2.1.1
+colorlog~=6.6.0
 frozenlist==1.3.1
 idna==3.3
 git+https://github.com/IotaSpencer/logging-disgram#egg=logging-disgram
 multidict==6.0.2
-omegaconf
+omegaconf~=2.2.3
 pip==22.2.2
 py-cord==2.0.1
 PyYAML==6.0
-setuptools==65.0.0
+setuptools==65.1.0
 wheel==0.37.1
 yarl==1.8.1
-sqlalchemy-aio
+sqlalchemy-aio==0.17.0
+anyio~=3.6.1
+sniffio~=1.2.0
+outcome~=1.2.0
+SQLAlchemy==1.4.40
+six~=1.16.0
+starlette~=0.20.4
+Represent~=1.6.0.post0
