--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
-antlr4-python3-runtime
+antlr4-python3-runtime==4.10
 async-timeout==4.0.2
 asyncclick==8.1.3.2
 attrs==22.1.0
@@ -14,10 +14,9 @@ omegaconf~=2.2.3
 pip==22.2.2
 py-cord==2.0.1
 PyYAML==6.0
-setuptools==65.1.0
+setuptools==65.2.0
 wheel==0.37.1
 yarl==1.8.1
-sqlalchemy-aio==0.17.0
 anyio~=3.6.1
 sniffio~=1.2.0
 outcome~=1.2.0
