--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 aiohttp==3.8.1
 async-timeout==4.0.2
 asyncclick==8.1.3.2
+asyncmy==0.2.5
 attrs==22.1.0
 colorlog~=6.6.0
+jishaku==2.3.0
 git+https://github.com/IotaSpencer/logging-disgram#egg=logging-disgram
 multidict==6.0.2
 omegaconf~=2.2.3
 pip==22.2.2
-py-cord==2.0.1
+py-cord==2.1.1
 PyYAML==6.0
-setuptools==65.2.0
+setuptools==65.3.0
 wheel==0.37.1
 pymysql==1.0.2
 anyio~=3.6.1
