--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-aiohttp==3.8.1
+aiohttp==3.8.3
+arrow==1.2.3
 async-timeout==4.0.2
-asyncclick==8.1.3.2
+asyncclick==8.1.3.4
 asyncmy==0.2.5
 attrs==22.1.0
-colorlog~=6.6.0
+colorlog==6.7.0
 jishaku==2.3.0
 git+https://github.com/IotaSpencer/logging-disgram#egg=logging-disgram
 multidict==6.0.2
@@ -11,8 +12,8 @@ omegaconf~=2.2.3
 pip==22.2.2
 py-cord==2.1.3
 PyYAML==6.0
-setuptools==65.3.0
+setuptools==65.4.1
 wheel==0.37.1
 pymysql==1.0.2
 anyio~=3.6.1
-SQLAlchemy==1.4.40
+SQLAlchemy==1.4.41
