--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,4 @@ setuptools==65.4.1
 wheel==0.37.1
 pymysql==1.0.2
 anyio~=3.6.1
-#SQLAlchemy==1.4.41
-git+ssh://git@github.com/SQLAlchemy/SQLAlchemy#egg=SQLAlchemy
+SQLAlchemy==1.4.41
