--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ jishaku==2.3.0
 git+ssh://git@github.com/IotaSpencer/logging-disgram#egg=logging-disgram
 multidict==6.0.2
 omegaconf~=2.2.3
-pip==22.2.2
+pip==22.3
 py-cord==2.2.2
 PyYAML==6.0
 setuptools==65.5.0
 wheel==0.37.1
 pymysql==1.0.2
-anyio~=3.6.1
-SQLAlchemy==1.4.41
+anyio==3.6.2
+SQLAlchemy==1.4.42
