more for submitting tickets

--- a/.editorconfig
+++ b/.editorconfig
@@ -175,3 +175,4 @@ root = true
 # ij_yaml_space_before_colon = false
 # ij_yaml_spaces_within_braces = true
 # ij_yaml_spaces_within_brackets = true
+[*.csv]
